--- a/React-Frontend/style/sidebar.css
+++ b/React-Frontend/style/sidebar.css
@@ -5,58 +5,47 @@ div.sidebar {
   padding-top: 50px;
   padding-bottom: 75%;
   position: fixed;
-  width: 19%;
+  width: 170px;
   left: 0;
   top: 37px;
   bottom: 0;
 }
 
 ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    left: 0;
-    background-color: #FBB040;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  left: 0;
+  background-color: #FBB040;
 }
 
 li a {
-    display: block;
-    color: #fff;
-    padding-left: 50px;
-    padding-top: 4px;
-    padding-bottom: 4px;
-    text-decoration: none;
-    font-family: Helvetica, Arial, san-serif;
-    font-weight: normal;
-    font-size: 16px;
+  display: block;
+  color: #fff;
+  padding-left: 50px;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  text-decoration: none;
+  font-family: Helvetica, Arial, san-serif;
+  font-weight: normal;
+  font-size: 16px;
 }
 
 li a:link {
-    display: block;
-    color: #fff;
-    padding-left: 50px;
-    padding-top: 4px;
-    padding-bottom: 4px;
-    text-decoration: none;
-    font-family: Helvetica, Arial, san-serif;
-    font-weight: normal;
-    font-size: 16px;
+  display: block;
+  color: #fff;
+  padding-left: 50px;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  text-decoration: none;
+  font-family: Helvetica, Arial, san-serif;
+  font-weight: normal;
+  font-size: 16px;
 }
 
 /* Change the link color on hover */
 li a:hover {
   background-color: #fff;
-  color: #5B5E5E;
-  text-decoration: none;
-}
-
-li a:active {
-  background-color: #fff;
-  color: #5B5E5E;
-  text-decoration: none;
-}
-
-li a:visited {
   color: #5B5E5E;
   text-decoration: none;
 }
